# my_linux_sdk

./: CMakeLists.txt
Utils/: lucas_cli.c  lucas_cli.h  utils.c  utils.h
create_lib/: lib.h  program  program.c  read.md
include/: common.h  debug.h  lucas.h
os/IO/: CMakeLists.txt  IO.C.c
os/IO/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  hellworld.txt  test
os/error/: error.c
os/error/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  test
os/group/: group.c
os/group/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  test
os/process/fork/: CMakeLists.txt  fork.c
os/process/fork/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  test
os/process/getpid.c/: getpid.c
shell/: first  readme.md  test  try_var
